Update pom to use more RAM